--- a/html/register.html
+++ b/html/register.html
@@ -55,7 +55,7 @@
                             </label>
                         </p>
                         
-                        <input type="submit" value="submit">
+                        <input type="submit" value="Submit">
                     </fieldset>
                 </form>
             </div>
