--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>Employee Refund System - Login</title>
 </head>
-<body>
+<body style="background-color:lightgreen">
 <center>
     <h1>Welcome to the Employee Refund System</h1>
 
     <div id="login" class="login">
-        <form action="users" target="blank" method="post">
+        <form action="user" target="blank" method="post">
             <fieldset style="width:500px">
                 <legend>LOGIN</legend>
                 <label>Username:
@@ -21,7 +21,7 @@
                 </label>
                 <br>
                 <br>
-                <input type="submit" value="Login">
+                <input type="submit" value="Login" onclick="login()">
             </fieldset>
         </form>
     </div>
@@ -33,7 +33,12 @@
         <a href="register.html">
             Register a new account
         </a>
+        <br>
+        <br>
+        <br>
+        <img src="https://i.ibb.co/NnVnrMX/202007231007-n-Cu30t-ENi1.jpg">
     </div>
 </center>
+<script src="indexScript.js"></script>
 </body>
 </html>
