--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -3,7 +3,7 @@
 <head>
     <title>Register a new account</title>
 </head>
-<body>
+<body style="background-color: lightgreen;">
 <center>
     <div id="register" class="register">
         <h1>Account Registration</h1>
