--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
                 </label>
                 <br>
                 <br>
-                <input type="submit" value="Login" onclick="login()">
+                <input type="submit" value="Login">
             </fieldset>
         </form>
     </div>
