--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -7,6 +7,7 @@
     <title>User Page</title>
 </head>
 <body style="background-color:lightgreen">
+    <form action="get" onload="getUser()"></form>
 
 
     <script src="userScript.js"></script>
