--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Page</title>
 </head>
-<body style="background-color:lightgreen">
-    <form action="get" onload="getUser()"></form>
+<body style="background-color:lightgreen" onload="getUser()">
+
 
 
     <script src="userScript.js"></script>
