--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Page</title>
 </head>
-<body style="background-color:lightgreen" onload="getUser()">
-
+<body onload="getUser()">
+    <div id="myDiv"></div>
 
 
     <script src="userScript.js"></script>
