--- a/src/main/webapp/apply.html
+++ b/src/main/webapp/apply.html
@@ -11,7 +11,7 @@
 </style>
 <body style="background-color:lightgreen" marginwidth="100px" marginheight="100px">
     <div id="apply" class="apply">
-        <form action="user.html" method="get" onclick="addForm()">
+        <form action="userSession" method="post" onclick="addForm()">
             <fieldset style="width:800px">
                 <legend>REFUND APPLICATION</legend>
                 <label>Event Type:
