--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -7,9 +7,9 @@
     <title>User Page</title>
 </head>
 <body onload="getUser()">
-    <div id="myDiv"></div>
+    <div id="myDiv">
 
-
+    </div>
     <script src="userScript.js"></script>
 </body>
 </html>
